--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
     
 <head>
     <title>Jovan Jocić</title>
@@ -98,7 +98,7 @@
         <div id="contact-info">
             <a href="https://github.com/the-jovan" target="_blank">github</a>
             <p id="email">jovanjocic1993@gmail.com</p>
-            <a href="https://docdro.id/hHS2Mxr" target="_blank">Download CV</a>
+            <a href="https://docdro.id/yfTCzd3" target="_blank">Download CV</a>
         </div>
     </div>
     
