--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="contact__info">
                 <a href="https://github.com/the-jovan" target="_blank">github</a>
                 <p id="email">jovanjocic1993@gmail.com</p>
-                <a href="https://docdro.id/edJZLMY" target="_blank">Download CV</a>
+                <a href="https://www.docdroid.net/Pg9xC6e/jovanjocic-cv.pdf" target="_blank">Download CV</a>
             </div>
             
         </footer>
